@@ -267,7 +267,8 @@ begin
 {$ENDIF LINUX}
 {$IFDEF DARWIN}
     //depotdrive := '/Network/opsi_depot';
-    depotdrive := '/Volumes/opsi_depot';
+    //depotdrive := '/Volumes/opsi_depot';
+    depotdrive := '/var/opsisetupadmin/opsi_depot';
 (*
     RunCommand('sw_vers -productVersion', outstr);
     if trim(outstr) > '10.14' then
@@ -513,6 +514,10 @@ end;
 
 initialization
   opsiscriptconf := opsiscriptconfinit;
+  {$IFDEF DARWIN}
+  //force_min_loglevel := 8;
+  //debug_prog:= True;
+  {$ENDIF DARWIN}
   initEncoding;
 (*
 {$IFDEF WINDOWS}
