@@ -417,8 +417,9 @@ begin
   mymountpoint := '/media/opsi_depot';
   {$ENDIF}
   {$IFDEF DARWIN}
-  mymountpoint := '/Network/opsi_depot';
+  //mymountpoint := '/Network/opsi_depot';
   //mymountpoint := '/Volumes/opsi_depot';
+  mymountpoint := '/var/opsisetupadmin/opsi_depot';
   //mymountpoint := '/media/opsi_depot';
   (*
       RunCommand('sw_vers -productVersion', outstr);
