@@ -1,7 +1,9 @@
 [changelog]
 opsiscriptstarter 4.1.0.13
 
-  * macos: change mountpoint to /Network/opsi_depot
+  //* macos: change mountpoint to /Network/opsi_depot
+  //* macos: change mountpoint back to /Volumes/opsi_depot
+  * macos: change mountpoint back to /var/opsisetupadmin/opsi_depot
   * oslog: startumessages only for opsiscript
 
 -- d.oertel <d.oertel@uib.de> Fri, 28 Aug 2020 15:00
